--- a/rps.css
+++ b/rps.css
@@ -1,23 +1,13 @@
 body{
-    width: 852px;
+    width: 100%;
     margin: 10px auto;
     font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
     color: #777;
     font-size: 1.3em;
 }
-#user_score,
-#cp_score,
-#rps_game{
-    display: inline-block;
-    vertical-align: top;
-}
-#user_score,
-#cp_score{
-    width: 290px;
-}
 #rps_game{
     width: 220px;
-    margin: 20px 20px 0 2px;
+    margin: 20px auto;
 }
 h1{
     font-weight: lighter;
@@ -70,9 +60,7 @@ div.rps_scissors_cp{
     margin-left: 54px;
     vertical-align: top;
 }
-#count_box,
-#start_rps,
-#clear_scores{
+#count_box{
     background-color: #fff;
     width: 220px;
     height: 40px;
@@ -81,29 +69,4 @@ div.rps_scissors_cp{
     text-align: center;
     text-transform: uppercase;
     margin-bottom: 10px;
-}
-#start_rps,
-#clear_scores{
-    border: 1px solid #777;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: 10px auto;
-    display: block;
-    color: #777;
-}
-#start_rps:focus,
-#clear_scores:focus{
-    outline: transparent;
-}
-#start_rps:hover,
-#clear_scores:hover{
-    background-color: #dedeff;
-}
-.fifth_mark{
-    position: relative;
-    left: -16px;
-    transform: skewX(54deg);
-    display: inline-block;
-    margin-right: 9px;
-    display: inline-block;
 }
