--- a/rps.css
+++ b/rps.css
@@ -4,9 +4,10 @@ body{
     font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
     color: #777;
     font-size: 1.3em;
+    text-transform: uppercase;
 }
 #rps_game{
-    width: 220px;
+    width: 290px;
     margin: 20px auto;
 }
 h1{
@@ -23,7 +24,6 @@ h1{
     width: 80px;
     height: 70px;
     border: 1px solid #fff;
-    border-radius: 5px;
     box-sizing: border-box;
     margin-bottom: 5px;
 }
@@ -33,11 +33,14 @@ h1{
     cursor: pointer;
 }
 div.rps_rock{
-    background: #aa00ff;
-    border-radius: 15px 9px 18px 30px;
+    background: #777777;
     position: relative;
     height: 39px;
     width: 51px;
+}
+
+div.rps_rock:hover{
+    background: #7777ff;
 }
 
 div.rps_rock::before{
@@ -53,8 +56,7 @@ div.rps_rock::after{
     height: 36px;
     width: 32px;
     background: inherit;
-    transform: translate(2px, -42px) rotate(180deg);
-    border-radius: 7px 20px 10px 6px;
+    transform: translate(-1px, -42px) rotate(170deg);
     content: "L";
     color: #fff;
     font-size: 35px;
