--- a/css/rps.css
+++ b/css/rps.css
@@ -42,7 +42,7 @@ h1 {
 .rps_choice {
     width: 80px;
     height: 70px;
-    margin: 0 auto 30px;
+    margin: 21px auto;
     background: url(../rps_sprite.png);
     background-repeat: no-repeat;
     cursor: pointer;
@@ -82,13 +82,9 @@ div.rps_rock::after {
     line-height: 27px;
 }
 
-div.rps_cp {
-   transform: scaleX(-1); 
-}
-
 /* Paper Style ----------------------------------------------- */
 div.rps_paper {
-    background: #444493;
+    background: #2FE8A9;
     position: relative;
     height: 37px;
     width: 53px;
@@ -127,6 +123,10 @@ div.rps_scissors {
 
 div.rps_scissors_cp {
     background-position: -105px -51px;
+}
+
+div.rps_cp {
+   transform: scaleX(-1); 
 }
 
 /* Five bars style ----------------------------------------- */
