--- a/css/rps.css
+++ b/css/rps.css
@@ -117,12 +117,37 @@ div.rps_paper::after {
 }
 
 /* Scissors Style ----------------------------------------------- */
-div.rps_scissors {
-    background-position: 0 -51px;
+div.rps_scissors,
+div.rps_scissors::before {
+    background: #FFAADA;
+    border-bottom: 3px solid #fff;
 }
 
-div.rps_scissors_cp {
-    background-position: -105px -51px;
+div.rps_scissors {
+    transform: rotate(10deg);
+    width: 44px;
+    height: 12px;
+}
+
+div.rps_scissors::before {
+    content: "";
+    display: block;
+    transform: translate(0, -11px) rotate(-20deg);
+    width: 40px;
+    height: 9px;
+}
+
+div.rps_scissors::after {
+    display: block;
+    height: 33px;
+    width: 32px;
+    background-color: inherit;
+    content: "||";
+    transform: translate(-14px, -16px) rotate(283deg);
+    color: #fff;
+    font-size: 36px;
+    text-align: center;
+    line-height: 35px;
 }
 
 div.rps_cp {
