animate rock bg on over

--- a/css/rps.css
+++ b/css/rps.css
@@ -50,7 +50,7 @@ div.rps_rock {
     background: -moz-linear-gradient(top,  #261c96 0%, #261c96 49%, #0082e5 50%, #0082e5 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top,  #261c96 0%,#261c96 49%,#0082e5 50%,#0082e5 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom,  #261c96 0%,#261c96 49%,#0082e5 50%,#0082e5 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    background-position: 0;
+    background-position: 0 0;
     background-size: 200%;
     height: 38px;
     width: 46px;
@@ -58,7 +58,7 @@ div.rps_rock {
 }
 
 div.rps_rock:hover {
-    background: #7777ff;
+    background-position: 0 -100%;
 }
 
 div.rps_rock::before {
@@ -73,13 +73,22 @@ div.rps_rock::after {
     display: block;
     height: 33px;
     width: 32px;
-    background-color: inherit;
     transform: translate(-1px, -42px) rotate(170deg);
     content: "L";
     color: #fff;
     font-size: 29px;
     text-align: center;
     line-height: 27px;
+    background: -moz-linear-gradient(top,  #261c96 0%, #261c96 49%, #0082e5 50%, #0082e5 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #261c96 0%,#261c96 49%,#0082e5 50%,#0082e5 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #261c96 0%,#261c96 49%,#0082e5 50%,#0082e5 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    background-size: 200%;
+    background-position: 0 0;
+    transition: background 0.2s ease;
+}
+
+div.rps_rock:hover::after{
+    background-position: 0 -100%;
 }
 
 /* Paper Style ----------------------------------------------- */
