rock change bg color and :;after rotate deg

--- a/css/rps.css
+++ b/css/rps.css
@@ -47,9 +47,9 @@ h1 {
 /* Rock Style ----------------------------------------------- */
 div.rps_rock {
     position: relative;
-    background: -moz-linear-gradient(top,  #261c96 0%, #261c96 49%, #0082e5 50%, #0082e5 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top,  #261c96 0%,#261c96 49%,#0082e5 50%,#0082e5 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom,  #261c96 0%,#261c96 49%,#0082e5 50%,#0082e5 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    background: -moz-linear-gradient(top,  #000b4c 0%, #000b4c 49%, #0082e5 50%, #0082e5 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #000b4c 0%,#000b4c 49%,#0082e5 50%,#0082e5 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #000b4c 0%,#000b4c 49%,#0082e5 50%,#0082e5 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     background-position: 0 0;
     background-size: 200%;
     height: 38px;
@@ -73,15 +73,15 @@ div.rps_rock::after {
     display: block;
     height: 33px;
     width: 32px;
-    transform: translate(-1px, -42px) rotate(170deg);
+    transform: translate(-5px, -43px) rotate(135deg);
     content: "L";
     color: #fff;
     font-size: 29px;
     text-align: center;
     line-height: 27px;
-    background: -moz-linear-gradient(top,  #261c96 0%, #261c96 49%, #0082e5 50%, #0082e5 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top,  #261c96 0%,#261c96 49%,#0082e5 50%,#0082e5 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom,  #261c96 0%,#261c96 49%,#0082e5 50%,#0082e5 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    background: -moz-linear-gradient(top,  #000b4c 0%, #000b4c 49%, #0082e5 50%, #0082e5 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #000b4c 0%,#000b4c 49%,#0082e5 50%,#0082e5 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #000b4c 0%,#000b4c 49%,#0082e5 50%,#0082e5 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     background-size: 200%;
     background-position: 0 0;
     transition: background 0.2s ease;
