--- a/css/rps.css
+++ b/css/rps.css
@@ -127,42 +127,46 @@ div.rps_paper::after {
 }
 
 /* Scissors Style ----------------------------------------------- */
-div.rps_scissors,
-div.rps_scissors::before {
-    background: #FFAADA;
-    border-bottom: 3px solid #fff;
-}
-
 div.rps_scissors {
-    transform: rotate(10deg);
-    width: 44px;
-    height: 12px;
-}
-
-div.rps_scissors::before {
-    content: "";
-    display: block;
-    transform: translate(0, -11px) rotate(-20deg);
-    width: 40px;
-    height: 9px;
-}
-
-div.rps_scissors::after {
-    display: block;
     height: 33px;
-    width: 32px;
-    background-color: inherit;
-    content: "||";
-    transform: translate(-14px, -16px) rotate(283deg);
+    width: 33px;
+    background: #FFAADA;
+    transform: translate(-17px, 0) rotate(120deg);
     color: #fff;
     font-size: 36px;
     text-align: center;
-    line-height: 35px;
+    text-indent: 4px;
+    line-height: 2px;
+    letter-spacing: 0.09rem;
+}
+
+div.rps_scissors::after,
+div.rps_scissors::before {
+    background: inherit;
+    width: 42px;
+    height: 9px;
+    content: "";
+    position: absolute;
+    display: block;
+    color: inherit;
+}
+
+div.rps_scissors::after {
+    transform: translate(-26px, -5px) rotate(66deg);
+}
+
+div.rps_scissors::before {
+    transform: translate(-39px, 7px) rotate(48deg);
+    width: 53px;
 }
 
 /* cp ------------------------------------------------------ */
 div.rps_cp {
    transform: scaleX(-1); 
+}
+
+div.rps_cp.rps_scissors {
+    transform: scaleX(-1) rotate(120deg);
 }
 
 /* Five bars style ----------------------------------------- */
