improve scissors bg transition

--- a/css/rps.css
+++ b/css/rps.css
@@ -172,22 +172,27 @@ div.rps_scissors::before {
     background: linear-gradient(to right, #54384a 0%,#54384a 49%,#ffaada 50%,#ffaada 100%);
     background-size: 201%;
     background-position: -99%;
-    transition: background 0.2s ease;
+    transition: 0;
 }
 
 div.rps_scissors::after {
-    transform: translate(-26px, -5px) rotate(246deg);
+    transform: translate(-26px, -5px) rotate(66deg);
 }
 
 div.rps_scissors::before {
-    transform: translate(-39px, 7px) rotate(228deg);
+    transform: translate(-39px, 7px) rotate(48deg);
     width: 53px;
 }
 
-div.rps_scissors:hover,
+div.rps_scissors:hover {
+    background-position: 0;
+    transition: background 0.14s ease;
+}
+
 div.rps_scissors:hover::before,
 div.rps_scissors:hover::after {
     background-position: 0;
+    transition: background 0.14s ease 0.06s;
 }
 
 /* cp ------------------------------------------------------ */
