--- a/css/rps.css
+++ b/css/rps.css
@@ -103,12 +103,6 @@ div.rps_paper {
     transition: background 0.2s ease;
 }
 
-div.rps_paper:hover::before,
-div.rps_paper:hover::after,
-div.rps_paper:hover {
-    background-position: 0;
-}
-
 div.rps_paper::before {
     content: "|||";
     background: linear-gradient(to right,  #115438 0%,#115438 49%,#2fe8a9 50%,#2fe8a9 100%); 
@@ -123,7 +117,7 @@ div.rps_paper::before {
     letter-spacing: 0.06rem;
     line-height: 63px;
     text-indent: -6px;
-    transition: background 0.2s ease;
+    transition: background 0.08s ease;
 }
 
 div.rps_paper::after {
@@ -140,6 +134,16 @@ div.rps_paper::after {
     line-height: 43px;
     text-indent: -5px;
     transition: background 0.2s ease;
+}
+
+div.rps_paper:hover::before,
+div.rps_paper:hover::after,
+div.rps_paper:hover {
+    background-position: 0;
+}
+
+div.rps_paper:hover::before {
+    transition: background 0.08s ease 0.05s;
 }
 
 /* Scissors Style ----------------------------------------------- */
