--- a/css/rps.css
+++ b/css/rps.css
@@ -42,13 +42,13 @@ body {
     margin: 0 auto;
 }
 
-.rps_choice::after,
-.rps_choice::before {
+.rps_choice:after,
+.rps_choice:before {
     border-radius: 3px;
 }
 
 /* Rock Style ----------------------------------------------- */
-div.rps_rock {
+.rps_rock {
     position: relative;
     background: linear-gradient(to bottom,  #000b4c 0%,#000b4c 49%,#0082e5 50%,#0082e5 100%); 
     background-position: 0 -100%;
@@ -59,11 +59,11 @@ div.rps_rock {
     transition: background 0.2s ease;
 }
 
-div.rps_rock:hover {
+.rps_rock:hover {
     background-position: 0 0;
 }
 
-div.rps_rock::before {
+.rps_rock:before {
     content: "|||";
     display: block;
     color: #fff;
@@ -72,7 +72,7 @@ div.rps_rock::before {
     letter-spacing: 0.05rem;
 }
 
-div.rps_rock::after {
+.rps_rock:after {
     display: block;
     height: 33px;
     width: 32px;
@@ -88,12 +88,12 @@ div.rps_rock::after {
     transition: background 0.2s ease;
 }
 
-div.rps_rock:hover::after{
+.rps_rock:hover:after{
     background-position: 0 0;
 }
 
 /* Paper Style ----------------------------------------------- */
-div.rps_paper {
+.rps_paper {
     background: linear-gradient(to right,  #115438 0%,#115438 49%,#2fe8a9 50%,#2fe8a9 100%); 
     background-position: -100%;
     background-size: 200%;
@@ -103,7 +103,7 @@ div.rps_paper {
     transition: background 0.2s ease;
 }
 
-div.rps_paper::before {
+.rps_paper:before {
     content: "|||";
     background: linear-gradient(to right,  #115438 0%,#115438 49%,#2fe8a9 50%,#2fe8a9 100%); 
     background-position: -100%;
@@ -120,7 +120,7 @@ div.rps_paper::before {
     transition: background 0.08s ease;
 }
 
-div.rps_paper::after {
+.rps_paper:after {
     content: "|";
     background: linear-gradient(to right,  #115438 0%,#115438 49%,#2fe8a9 50%,#2fe8a9 100%); 
     background-position: -100%;
@@ -136,18 +136,18 @@ div.rps_paper::after {
     transition: background 0.2s ease;
 }
 
-div.rps_paper:hover::before,
-div.rps_paper:hover::after,
-div.rps_paper:hover {
+.rps_paper:hover:before,
+.rps_paper:hover:after,
+.rps_paper:hover {
     background-position: 0;
 }
 
-div.rps_paper:hover::before {
+.rps_paper:hover:before {
     transition: background 0.08s ease 0.05s;
 }
 
 /* Scissors Style ----------------------------------------------- */
-div.rps_scissors {
+.rps_scissors {
     height: 33px;
     width: 33px;
     background: #FFAADA;
@@ -164,8 +164,8 @@ div.rps_scissors {
     transition: background 0.2s ease;
 }
 
-div.rps_scissors::after,
-div.rps_scissors::before {
+.rps_scissors:after,
+.rps_scissors:before {
     background: inherit;
     width: 42px;
     height: 9px;
@@ -179,53 +179,54 @@ div.rps_scissors::before {
     transition: 0;
 }
 
-div.rps_scissors::after {
+.rps_scissors:after {
     transform: translate(-26px, -5px) rotate(66deg);
 }
 
-div.rps_scissors::before {
+.rps_scissors:before {
     transform: translate(-39px, 7px) rotate(48deg);
     width: 53px;
 }
 
-div.rps_scissors:hover {
+.rps_scissors:hover {
     background-position: 0;
     transition: background 0.14s ease;
 }
 
-div.rps_scissors:hover::before,
-div.rps_scissors:hover::after {
+.rps_scissors:hover:before,
+.rps_scissors:hover:after {
     background-position: 0;
     transition: background 0.14s ease 0.06s;
 }
 
 /* cp ------------------------------------------------------ */
-div.rps_cp {
+.rps_cp {
    transform: scaleX(-1); 
 }
 
-div.rps_cp.rps_scissors {
+.rps_cp.rps_scissors {
     transform: scaleX(-1) rotate(120deg);
 }
 
-div.rps_cp.rps_rock,
-div.rps_cp.rps_rock::before,
-div.rps_cp.rps_rock::after,
-div.rps_cp.rps_paper,
-div.rps_cp.rps_paper::before,
-div.rps_cp.rps_paper::after,
-div.rps_cp.rps_scissors,
-div.rps_cp.rps_scissors::before,
-div.rps_cp.rps_scissors::after {
+.rps_cp.rps_rock,
+.rps_cp.rps_rock:before,
+.rps_cp.rps_rock:after,
+.rps_cp.rps_paper,
+.rps_cp.rps_paper:before,
+.rps_cp.rps_paper:after,
+.rps_cp.rps_scissors,
+.rps_cp.rps_scissors:before,
+.rps_cp.rps_scissors:after {
     transition: none;
 }
+
 /* Five bars style ----------------------------------------- */
-span.fiveBars {
+.fiveBars {
     margin: 2px 3px;
     display: inline-block;
 }
 
-.fiveBars::after {
+.fiveBars:after {
     transform: skew(53deg) translate(-17px, 0px) rotate(-54deg);
     display: inline-block;
     content: "|";
